bitfield/tests/08-non-power-of-two.stderr
error: BitfieldSpecifier expected a number of variants which is a power of 2
  --> $DIR/08-non-power-of-two.rs:11:1
   |
11 | / pub enum Bad {
12 | |     Zero,
13 | |     One,
14 | |     Two,
15 | | }
   | |_^
